# 3D-DyCorePlanet

./: .gitignore  CMakeLists.txt  README.md  aqua_planet.in  hsp.in
contrib/utilities/: indent_common.sh
data/: aqua_planet.in  aqua_planet.prm  aqua_planet_cube_test_3d-feec.prm  aqua_planet_cube_test_3d.prm  aqua_planet_shell_test_3d-classic.prm  aqua_planet_shell_test_3d-feec.prm  aqua_planet_test.in  aqua_planet_test_2d.in  aqua_planet_test_2d.prm  aqua_planet_test_3d.in  aqua_planet_test_3d.prm
doc/: Doxyfile
include/: aqua_planet.h
include/base/: config.h  utilities.h  utilities.tpp
include/core/: aqua_planet.h  boussineq_model_FEEC.h  boussineq_model_FEEC.tpp  boussineq_model_assembly.h  boussineq_model_assembly.tpp  boussineq_model_assembly_FEEC.h  boussineq_model_assembly_FEEC.tpp  boussinesq_model.h  boussinesq_model.tpp  planet_geometry.h  planet_geometry.tpp
include/linear_algebra/: approximate_inverse.hpp  approximate_schur_complement.hpp  block_schur_preconditioner.hpp  block_schur_preconditioner_FEEC.hpp  inverse_matrix.hpp  nested_schur_complement.hpp  preconditioner.h  preconditioner_block_identity.h  preconditioner_block_identity.hpp  schur_complement.hpp  shifted_schur_complement.hpp
include/model_data/: boussinesq_model_data.h  boussinesq_model_data.hpp  boussinesq_model_data.tpp  boussinesq_model_parameters.h  core_model_data.h  core_model_data.tpp  physical_constants.h  reference_quantities.h
source/: CMakeLists.txt  aqua_planet.cc  hsp.cc  main.cxx
source/base/: utilities.cc
source/core/: aqua_planet.cc  boussineq_model_assembly.inst.cc  boussineq_model_assembly_FEEC.inst.cc  boussinesq_model.cc  boussinesq_model.inst.cc  boussinesq_model_FEEC.inst.cc
source/model_data/: boussinesq_model_data.cc  boussinesq_model_data.inst.cc  boussinesq_model_parameters.cc  core_model_data.cc  core_model_data.inst.cc  physical_constants.cc  reference_quantities.cc
test/: CMakeLists.txt
